# f1_04

./: README.md  vicon_bridge.py
src/f1tenth_control/vicon_control/: CMakeLists.txt  package.xml
src/f1tenth_control/vicon_control/scripts/: depth_function.py  depth_params.txt  lane_detector.py  pix_extractor.py  pure_pursuit_controller.py
src/f1tenth_control/vicon_control/scripts/Detector/: utils.py  yolo_detect_image.py  yolov3-tiny.cfg
src/f1tenth_control/vicon_control/scripts/Detector2/: readme
